# llmatic

./: README.md  pyproject.toml
examples/: basic.py
llmatic/: __init__.py  cli.py  db.py  tracker.py  utils.py
tests/: test_llmatic.py
