[tool.poetry]
name = "llmatic"
version = "0.0.1"
description = "No BS utilities for developing with LLMs"
authors = ["Agam More"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
tokencost = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llmatic = "llmatic.cli:main"

